# silverplume_point_of_sale

./: Cargo.toml  readme.md
src/: app.rs  as_description.rs  as_transaction_record.rs  database.rs  decimal_input.rs  donation.rs  get_payment_method.rs  gift_shop_sale.rs  main.rs  map_and_pass.rs  payment_method.rs  sale_screen.rs  summary.html  to_model.rs  transaction_record.rs
src/admission/: kind.rs  mod.rs  type_.rs
src/database/: database_object.rs  from_sql.rs  has_schema.rs  mod.rs  object_mapper.rs  to_sql.rs
src/membership/: kind.rs  mod.rs
src/model/: as_transaction_record.rs  cart_item.rs  date_time_wrapper.rs  donation.rs  get_payment_method.rs  gift_shop_sale.rs  has_payment_method.rs  has_total_cost.rs  hour.rs  mod.rs  payment_method.rs  transaction_record.rs
src/model/admission/: kind.rs  mod.rs
src/model/membership/: kind.rs  mod.rs
src/view/: adapters.rs  admission.rs  donation.rs  gift_shop_sale.rs  membership.rs  mod.rs  summary_dicts.rs
