[package]
name = "silverplume_point_of_sale"
version = "0.1.1"
edition = "2024"

[dependencies]
iced = "0.13.1"
iced_aw = {version = "0.12.2", features = ["number_input", "tab_bar"]}
iced_fonts = "0.2.1"
strum = {version = "0.27.1", features = ["derive"]}
chrono = {version = "0.4.41", features = ["serde"]}
anyhow = "1.0.98"
sqlite = "0.37.0"
indexmap = "2.10.0"
itertools = "0.14.0"